# rstock

./: .gitignore  Cargo.toml  README.md  Rocket.toml
data/: boerse_frankfurt_FR0007056841.csv  boerse_frankfurt_IE00B4L5Y983.csv
migrations/2019-04-05-185227_create_prices/: up.sql
migrations/2019-04-06-083450_watchlist/: down.sql  up.sql
src/: api.rs  daemon.rs  db.rs  main.rs  models.rs  onvista.rs  schema.rs
