[package]
name = "rstock"
version = "0.1.0"
authors = ["Stefan Mesken <kappadistributive@gmail.com>"]
edition = "2018"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "numeric", "chrono"] }
dotenv = "0.13.0"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive  = "1.0.80"
serde_json = "1.0.32"
rocket = "0.4.0-dev"

chrono = { version = "0.4.6", features = ["serde"] }
bigdecimal = { version = "0.0.14", features = ["serde"] }
reqwest = "0.9.13"
select = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]
